fix search style on mobile

--- a/src/app/contacts-list/contacts-list.component.css
+++ b/src/app/contacts-list/contacts-list.component.css
@@ -9,3 +9,13 @@ ul {
   padding: 0;
   margin: 0;
 }
+.search-input-container {
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 786px) {
+  .search-input-container {
+    display: block;
+  }
+}
